Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.7 (2008/10/24)

    Bugs fixed

      - Launchpad #282677: fixed implementation of guarded_map and
        provided tests and implementation for guarded_zip
        (RestrictedPython).

      - Lauchpad #143736,#271395: fixed AttributeError' on _ltid in TempStorage

      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
        exceptions onto ImportErrors:  don't do that!  Also, removed
        mutable defaults from argument list, improved tests.

      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped
        ModuleSecurity for failed imports, obscuring later attempts to
        import the same broken module.

      - LP #142667:  Updated to ZODB-3.7.3 to fix problem with product
        auto-refresh.

      - Updated to Five 1.5.8

      - Launchpad #245649:  the Products package is now a proper
        "namespace package" under the rules specified by setuptools.

      - Fixed outdated transaction.commit(1) call in 
        ZODBMountPoint.SimpleTrailblazer

      - Launchpad #239636:  Ensure that HEAD requests lock an empty body
        for NotFound errors.

      - Launchpad #229549:  Don't ignore 'debug' flag when rendering
        page templates (thanks to Eric Steele for the patch).

      - integrated Hotfix-2008-08-12

      - Launchpad #267545: DateTime(DateTime()) now preserves the
        correct hour

      - Launchpad #262313: respect the 'Expand macros when editing' flag
        when editing a page template through the ZMI


  Zope 2.10.6 (2008/05/10)

    Bugs fixed

      - Launchpad #142350: Display description for properties as row title,
        if present.

      - Launchpad #200007: DateTime(anotherDateTime) now preserves the
        timezone.

      - Launchpad #213311:  Handle "unsubscriptable object" errors